Change the picture logo name

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
                     data-amount="2500"
                     data-name="Web Development Ebook"
                     data-description="Ebook written by Brad Traversy"
-                    data-image="/images/Logo.png"
+                    data-image="/Images/marketplace.png"
                     data-locale="auto">
                 </script>
                 <script>
