Made the page responsive and changed the desing

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,7 +1,9 @@
 
 h4 {margin: 0; padding-left: 4px;}
 
-
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Dosis", sans-serif;
+}
 
 /**************************** Nav Section *************************/
 
@@ -16,6 +18,7 @@ h4 {margin: 0; padding-left: 4px;}
   .navbar.navbar-dark {
     z-index: 2;
     padding: 0% 7% 0% 7%;
+    background-color: white;
   }
   
   .nav-link {
@@ -25,29 +28,24 @@ h4 {margin: 0; padding-left: 4px;}
   }
   
   .navbar-brand {
-
     font-size: 0.9rem;
     letter-spacing: 0.2em;
-
     display: flex;
     align-items: center;
   }
   
-  .navbar-dark .navbar-brand {color: rgb(255, 255, 255);}
+  .navbar-dark .navbar-brand {color: rgb(0, 0, 0);}
 
-  .navbar-dark .navbar-brand:hover {color: rgb(255, 255, 255);}
+  .navbar-dark .navbar-brand:hover {color: rgb(0, 0, 0);}
+
+  .navbar-dark .navbar-nav .nav-link {color: rgb(0, 0, 0);}
+  
+  .navbar-dark .navbar-nav .nav-link:defined {color: rgb(0, 0, 0);}
+
+  .navbar-dark .navbar-nav .nav-link:hover {color: rgba(0, 0, 0, 0.7);}
 
   
-  .navbar-dark .navbar-nav .nav-link {color: rgb(255, 255, 255);}
-  
-  .navbar-dark .navbar-nav .nav-link:defined {color: rgb(255, 255, 255);}
-
-  .navbar-dark .navbar-nav .nav-link:hover {color: rgba(233, 230, 230, 0.7);}
-
-  
-  .logo {
-    width: 125px;
-  }
+  .logo {width: 35px;}
 
 
   .navbar-dark .navbar-toggler-icon {
@@ -62,5 +60,193 @@ h4 {margin: 0; padding-left: 4px;}
   /**************************** Body Section *************************/
 
   .bodycolor {
-    background-color: darkgrey;
+    background: #f9f9f9;
+  }
+
+
+
+/**************************** Hero Section *************************/
+.container {min-width: 85%;}
+
+#hero {
+  width: 100%;
+  height: 90vh;
+  background: #f9f9f9;
+}
+
+#hero .container {
+  padding-top: 10px;
+}
+
+#hero h1 {
+  margin: 0;
+  font-size: 42px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #0f394c;
+  text-transform: uppercase;
+}
+
+#hero h2 {
+  color: #1c698c;
+  margin: 10px 0 0 0;
+  font-size: 20px;
+}
+
+#hero .btn-get-started {
+  font-family: "Dosis", sans-serif;
+  font-size: 14px;
+  display: inline-block;
+  padding: 6px 15px;
+  border-radius: 3px;
+  transition: 0.5s;
+  margin-top: 25px;
+  color: #fff;
+  background: #49b5e7;
+  text-transform: uppercase;
+  border: 0;
+}
+
+#hero .btn-get-started:hover {
+  background: #76c7ed;
+}
+
+@media (max-width: 992px) {
+  #hero {
+    height: 100vh;
+    text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  #hero h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+  #hero h2 {
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
+
+/*--------------------------------------------------------------
+# Sections General
+--------------------------------------------------------------*/
+section {
+  padding-top: 60px;
+  padding-bottom: 90px;
+  overflow: hidden;
+}
+
+.section-bg {
+  background-color: #f4fbfe;
+}
+
+.section-title {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.section-title h2 {
+  font-size: 32px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  padding-bottom: 0;
+  color: #0f394c;
+}
+
+.section-title p {
+  margin-bottom: 0;
+}
+
+
+  /**************************** Book Section *************************/
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform-style: preserve-3d;
+  perspective: 1000px;
+}
+
+section .book {
+    position: relative;
+    width: 383px;
+    height: 567px;
+    box-shadow: 20px 20px 20px rgba(0,0,0,0.2);
+    transform-style: preserve-3d;
+    animation: movebook 3s ease 0.5s both;
+    transition: 0.5s;
+}
+
+.hero-img {
+  padding-top: 20px;
+}
+
+section .book:hover {
+    transform: rotateY(35deg);
+    box-shadow: 0px 20px 20px rgba(0,0,0,0.2);
+}
+
+section .book:active {
+    transform: rotateY(180deg);
+}
+
+section .book:before {
+    content: '';
+    position: absolute;
+    width: 60px;
+    height: 100%;
+    transform-origin: left;
+    background: url("/Images/Book\ Side.png");
+    background-position: center;
+    transform: rotateY(270deg) translatex(-60px);
+}
+
+section .book:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    background: url("/Images/Book\ Back.png");
+    background-position: center;
+    transform: rotateY(180deg) translateZ(60px);
+}
+
+section .book img { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media (max-width: 992px) { 
+  section .book {
+    width: 313px;
+    height: 440px;
+  }
+  section .book:after {
+    left: 0;
+    transform: rotateY(180deg) translateZ(49px);
+    background-size: contain;
+  }
+  section .book:before {
+    background-position: left; 
+    left: 0; 
+    width: 50px;
+    transform: rotateY(270deg) translatex(-49px);
+  }
+ }
+
+
+
+@keyframes movebook {
+    0% {transform: rotateY(0deg);}
+    30% {transform: rotateY(35deg);}
+    80% {transform: rotateY(180deg);}
+    100% {transform: rotateY(35deg);}
   }
