--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,9 +19,9 @@
 
 <body class="bodycolor">
     <!-- Div containts brand, toggle button for navbar, and navbar -->
-    <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-dark navbar-expand-lg ">
         <a class="navbar-brand">
-            <img src="/Images/bookmagic.png" class="logo" alt="...">
+            <img src="/Images/marketplace.png".png" class="logo" alt="...">
             <h4>Book Shelf</h4>
         </a>
 
